# qt_rt_app

./: CMakeLists.txt  Material.cpp  Material.hpp  OpticalSystem.cpp  OpticalSystem.hpp  README.md  Ray.cpp  Ray.hpp  Surface.cpp  Surface.hpp  main-test.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newglassform.cpp  newglassform.h  newglassform.ui  raytrace.cpp  raytrace.h  raytrace.ui
database/: main_db.db
